# pytest-duckdb

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_duckdb/: __init__.py  fixtures.py  plugin.py  snapshot.py
tests/: conftest.py  test_fixture_schemas.py  test_fixtures.py  test_integration.py  test_plugin.py  test_plugin_config.py  test_snapshot.py  test_sql_marker.py
tests/__snapshots__/: test_integration_test_sql_snapshot_fixture_creates.parquet  test_integration_test_sql_snapshot_fixture_matches.parquet
tests/fixtures/: orders.csv
tests/queries/: join.sql  simple.sql
