[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-duckdb"
version = "0.1.0"
description = "pytest plugin for SQL pipeline testing with DuckDB — load fixtures, run queries, snapshot results"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Annas Mazhar", email = "annas.mazhar10@gmail.com" }]
keywords = ["pytest", "duckdb", "sql", "testing", "data-engineering", "snapshot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest-cov>=5.0",
    "pandas>=2.0",
]

[project.entry-points.pytest11]
duckdb = "pytest_duckdb.plugin"

[project.urls]
Homepage = "https://github.com/AnnasMazhar/pytest-duckdb"
Issues = "https://github.com/AnnasMazhar/pytest-duckdb/issues"
Source = "https://github.com/AnnasMazhar/pytest-duckdb"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_duckdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
